# tinympc

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  dynamics_model_training_config.toml  index.html  pyproject.toml
.github/workflows/: deploy.yml
base/: Cargo.toml
base/src/: constants.rs  game.rs  lib.rs  main.rs  policy_net.rs  record.rs  rocket_sprite.rs  world.rs
core/: Cargo.toml
core/src/: lib.rs  main.rs
data/: physics_data.csv
gym/: Cargo.toml
gym/src/: lib.rs  main.rs
models/: dynamics_model.onnx  dynamics_model.pth
python/: pyproject.toml
python/models/: policy_net.onnx  policy_net.pth  value_net.pth
python/src/: ppo.py
python/tests/: no_control_test_episode.py  ppo_test_episodes.py
python/utils/: export_to_onnx.py
src/: cem_controller.rs  dynamics_model.rs  generate_physics_data.rs  lib.rs  main.rs  path_drawer.rs  ppo.py  record.rs  rocket.rs  rocket_sprite.rs  world.rs
src/tinympc/: dynamics_model.py  ppo.py
src/utils/: load_toml_config.py
tests/: dynamics_model_inference_test.py  trajectory_rollout_test.py
