[package]
name = "tinympc"
version = "0.1.0"
edition = "2024"
default-run = "tinympc"

[features]
default = []
logging = []

[dependencies]
macroquad = "0.4.14"
rapier2d = { version = "0.26.1", features = ["simd-stable"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.2"
serde_derive = "1.0"
