[project]
name = "mpc-nn"
version = "0.1.0"
description = "A neural network used to emulate an MPC for rocket landing"
authors = [{ name = "Akkshay Sundara Rajan", email = "sundar57@purdue.edu" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["torch (>=2.7.1,<3.0.0)", "numpy (>=2.3.0,<3.0.0)"]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = { source = "pytorch_cpu" }
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
