[project]
name = "tinympc"
version = "0.1.0"
description = "Neural network based MPC controller for a rocket landing scenario"
authors = [
    {name = "Akkshay Sundara Rajan",email = "sundar57@purdue.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
