[package]
name = "base"
version = "0.1.0"
edition = "2024"
default-run = "controlled_sim"

[features]
default = []
logging = []
keyinput = []

[dependencies]
macroquad = "0.4.14"
rapier2d = { workspace = true }
rand = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
csv = "1.2"
serde_derive = "1.0"
ndarray = "0.16.1"
rand_distr = "0.5.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# for native testing using standard onnx runtime
ort = { version = "2.0.0-rc.9" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# for web using alternative backend
ort = { version = "2.0.0-rc.9", default-features = false, features = ["alternative-backend"] }
ort-tract = "0.1.0+0.21"

[[bin]]
name = "base"
path = "src/main.rs"

[[bin]]
name = "controlled_sim"
path = "src/bin/controlled_sim.rs"
