[package]
name = "base"
version = "0.1.0"
edition = "2024"
default-run = "controlled_sim"

[features]
default = []
logging = []
keyinput = []

[dependencies]
macroquad = "0.4.14"
rapier2d = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
csv = "1.2"
serde_derive = "1.0"
ndarray = "0.16.1"
rand_distr = "0.5.1"
# for web using alternative backend
tract-onnx = "0.21"
anyhow = "1.0"
getrandom-02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom-03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }


[[bin]]
name = "base"
path = "src/main.rs"

[[bin]]
name = "controlled_sim"
path = "src/bin/controlled_sim.rs"
