[package]
name = "core"
version = "0.1.0"
edition = "2024"

[features]
default = []
logging = []

[dependencies]
macroquad = "0.4.14"
rapier2d = { version = "0.26.1", features = ["simd-stable"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.2"
serde_derive = "1.0"
ort = "=2.0.0-rc.10"
ndarray = "0.16.1"
rand = "0.9.1"
rand_distr = "0.5.1"
