[package]
name = "gym"
version = "0.1.0"
edition = "2024"

[lib]
name = "gym"
crate-type = ["cdylib"]

[dependencies]
base = { path = "../base" }
pyo3 = { version = "0.24", features = ["extension-module"] }
rapier2d = { version = "0.26.1", features = ["simd-stable"] }
rand = "0.9.1"

[package.metadata.maturin]
module-name = "gym"
