[tool.poetry]
name = "tinympc"
version = "0.1.0"
description = "Neural network based MPC controller for a rocket landing scenario"
authors = ["Akkshay Sundara Rajan <sundar57@purdue.edu>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=2.3.1,<3.0.0"
pandas = ">=2.3.0,<3.0.0"
scikit-learn = ">=1.7.0,<2.0.0"
torch = {version = ">=2.7.1,<3.0.0", source = "pytorch_cpu"}
matplotlib = ">=3.10.3,<4.0.0"
onnx = ">=1.18.0,<2.0.0"
onnxscript = ">=0.3.2,<0.4.0"
maturin = ">=1.9.1,<2.0.0"
standard-imghdr = ">=3.13.0,<4.0.0"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.maturin]
bindings = "pyo3"
manifest-path = "../gym/Cargo.toml"

[build-system]
requires = ["maturin>=1.9.1,<2.0.0"]
build-backend = "maturin"
